dist/1.0/bin/sample/retrieveUnpackaged/objects/Costs_Agreement__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Abbr__c</fullName>
        <label>Abbr</label>
        <picklist>
            <picklistValues>
                <fullName>Aberd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACSys.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adgar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ag.Cor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AkEkon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akwawi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ancot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AnkoSy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AstNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bełch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bipros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BitWar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brak danych</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BreBank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CABetr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carmel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>colt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditSu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DialT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elewar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accrual_account__c</fullName>
        <label>Accrual account</label>
        <picklist>
            <picklistValues>
                <fullName>645003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>645002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>645047</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_ID__c</fullName>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Costs_Agreement__c</referenceTo>
        <relationshipLabel>Appendix</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CR_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CR Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments_Agreement__c</fullName>
        <label>Comments Agreement</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_name__c</fullName>
        <label>Company name</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Energis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Polska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Termination_Specified_Term__c</fullName>
        <label>Contract Termination (Specified Term)</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract Leased Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_account__c</fullName>
        <label>Cost account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Signing__c</fullName>
        <label>Date of Signing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Comments__c</fullName>
        <label>Deposit Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_Currency__c</fullName>
        <label>Deposit Currency</label>
        <picklist>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Fee__c</fullName>
        <label>Deposit Fee</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Payment_Date__c</fullName>
        <label>Deposit Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Service__c</fullName>
        <label>End of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Owner__c</fullName>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Identification_number__c</fullName>
        <label>Identification number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOR_account__c</fullName>
        <label>MOR account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements2Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <picklist>
            <picklistValues>
                <fullName>Rental Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Report/Lease Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TH_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TH Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_months__c</fullName>
        <label>Termination (months)</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>n/a</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Guarantee__c</fullName>
        <label>Type of Guarantee</label>
        <picklist>
            <picklistValues>
                <fullName>Guarantee Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promissory Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notarial Deeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_cost_Summary__c</fullName>
        <label>Type of cost Summary</label>
        <picklist>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR/TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZDM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_lease_agreement__c</fullName>
        <description>Type of document</description>
        <label>Type of lease agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Appendix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice__c</fullName>
        <label>Vendor Invoice</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_contract__c</fullName>
        <label>Vendor contract</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Vendor contract)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agr__c</fullName>
        <label>agr</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amig__c</fullName>
        <label>amig</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auf__c</fullName>
        <label>auf</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auu__c</fullName>
        <label>auu</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avc__c</fullName>
        <label>avc</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avi__c</fullName>
        <label>avi</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>spolki</fullName>
        <columns>Agreement_ID__c</columns>
        <columns>Identification_number__c</columns>
        <columns>NAME</columns>
        <columns>Financial_Owner__c</columns>
        <columns>Agreement__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor_Invoice__c</columns>
        <columns>Date_of_Signing__c</columns>
        <columns>End_of_Service__c</columns>
        <columns>Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Identification_number__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Vendor_Invoice__c</field>
            <operation>contains</operation>
            <value>polkomtel</value>
        </filters>
        <filters>
            <field>Financial_Owner__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Agreement_ID__c</field>
            <operation>contains</operation>
        </filters>
        <label>spolki</label>
    </listViews>
    <nameField>
        <displayFormat>A{00000}</displayFormat>
        <label>Agreement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AG_CompanyName_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Company_name__c ,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Company_name__c</errorDisplayField>
        <errorMessage>You must choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AG_REPORT_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Report__c ,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Report__c</errorDisplayField>
        <errorMessage>You must choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AG_TERMINATION_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Termination_months__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Termination_months__c</errorDisplayField>
        <errorMessage>You must a choose a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AG_VENDORCON_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Vendor_contract__c )</errorConditionFormula>
        <errorDisplayField>Vendor_contract__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AG_VENDORIN_ISBLANK</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Vendor_Invoice__c )</errorConditionFormula>
        <errorDisplayField>Vendor_Invoice__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Of_Service_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Date_of_Signing__c &gt; End_of_Service__c,true,false)</errorConditionFormula>
        <errorMessage>End of Service date cannot be before Date of Signing</errorMessage>
    </validationRules>
</CustomObject>